# agentic-radar

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Problem_Statement  README.md  index.html  pyproject.toml  results.json
.github/workflows/: pages.yml
data/: apps_test.json  data_backup.json
outputs/: report.html  results.json
src/ctie/: __init__.py  cli.py  config.py
src/ctie/agents/: __init__.py  enrichment.py  extraction.py  scoring.py  verification.py
src/ctie/graph/: __init__.py  builder.py  runner.py  state.py
src/ctie/llm/: __init__.py  azure_openai.py  base.py  bedrock.py  factory.py  fallback.py
src/ctie/models/: __init__.py  app.py  enums.py  evidence.py  insights.py  result.py
src/ctie/prompts/: __init__.py  extract.py  verify.py
src/ctie/report/: __init__.py  generator.py  insights.py  template.html
src/ctie/retrieval/: __init__.py  fetcher.py
src/ctie/search/: __init__.py  base.py  composio.py  factory.py
src/ctie/storage/: __init__.py  sqlite.py
