[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctie"
version = "0.1.0"
description = "Composio Toolkit Intelligence Engine — autonomous SaaS research pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["ai-agents", "mcp", "tool-calling", "composio", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.3,<3",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "structlog>=24.1,<25",
    "python-dotenv>=1.0,<2",

    # Async / HTTP / Parsing
    "httpx[http2]>=0.27,<1",
    "aiosqlite>=0.20,<1",

    # Orchestration
    "langgraph>=0.2,<1",
    "langgraph-checkpoint-sqlite>=2.0,<3",
    "langchain-core>=0.2,<1",

    # Composio v3 SDK for search, fetch, and toolkit enrichment
    "composio>=0.18,<1",

    # Circuit breaker and retry logic for production stability
    "circuitbreaker>=2.0,<3",
    "tenacity>=8.2,<9",

    # LLM providers (Azure OpenAI primary, AWS Bedrock fallback)
    "boto3>=1.34,<2",
    "openai>=2.42,<3",

    # Templating / Report
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "respx>=0.21,<1",
]

[project.scripts]
ctie = "ctie.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ctie"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
